# Agent-Config-MCP

./: README.md  comprehensive_tasks.md  mcp_remaining_tasks.md
.github/: copilot-instructions-test.md  copilot-instructions.md
Docker/: CLAUDE.md  Dockerfile  INTEGRATION_COMPLETE.md  MCP_BRIDGE_INTEGRATION_GUIDE.md  claude-desktop-mcp-config.json  custom.yaml  mcp-builder-prompt.md  mcp_swarm_intelligence_server.py  readme.txt  requirements.txt  test-mcp-integration.sh  vscode-mcp-config.json
Docker/data/: memory.db
Server_Plans/: plans.md
agent-config/: agent-hooks.md  debug.md  orchestrator.md  project_commands_config.md  project_rules_config.md  security_reviewer.md
agent-config/specialists/: code.md  devops_infrastructure_specialist.md  documentation_writer.md  hive_mind_specialist.md  mcp_specialist.md  memory_management_specialist.md  performance_engineering_specialist.md  python_specialist.md  swarm_intelligence_specialist.md  test_utilities_specialist.md  truth_validator.md
mcp-swarm-server/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_mcp_server_integration.py  validate_integration.py
mcp-swarm-server/scripts/: init_database.py
mcp-swarm-server/src/config/: __init__.py
mcp-swarm-server/src/data/: schema.sql
mcp-swarm-server/src/mcp_swarm/: __init__.py  cli.py
mcp-swarm-server/src/mcp_swarm/agents/: __init__.py  availability_tracker.py  capability_matrix.py  config_operations.py  config_reloader.py  config_scanner.py  ecosystem_monitor.py  hook_config.py  hook_engine.py  hook_error_handler.py  hook_monitor.py  load_monitor.py  manager.py  metrics_collector.py
mcp-swarm-server/src/mcp_swarm/automation/: __init__.py  adaptive_learning.py  anomaly_detection.py  automation_validator.py  automation_validator_old.py  capacity_planner.py  compliance_validator.py  error_recovery.py  evolutionary_optimizer.py  health_monitor.py  metrics_reporter.py  multi_agent_coordinator.py  parallel_engine.py  performance_optimizer.py  predictive_maintenance.py  predictive_models.py  quality_validator.py  workflow_orchestrator.py
mcp-swarm-server/src/mcp_swarm/docs/: __init__.py
mcp-swarm-server/src/mcp_swarm/docs/templates/: agent_workflow_instructions.md.template  copilot_instructions.md.template  mcp_integration_instructions.md.template
mcp-swarm-server/src/mcp_swarm/memory/: __init__.py  manager.py
mcp-swarm-server/src/mcp_swarm/quality/: __init__.py  documentation_gate.py  gate_engine.py  mcp_tools.py  performance_gate.py  security_gate.py  test_coverage_gate.py
mcp-swarm-server/src/mcp_swarm/server/: __init__.py  agent_integration.py  base.py  factory.py  messages.py  resources.py  tools.py
mcp-swarm-server/src/mcp_swarm/swarm/: __init__.py  aco.py  coordinator.py  decisions.py  pheromones.py  pso.py
mcp-swarm-server/src/mcp_swarm/templates/: __init__.py  project_structure.py
mcp-swarm-server/src/mcp_swarm/tools/: __init__.py  adaptive_coordination.py  adaptive_learning_tool.py  agent_assignment.py  agent_config_manager.py  agent_discovery_tool.py  agent_hooks_tool.py  automation_validation_tool.py  complete_pipeline_tool.py  confidence_aggregation.py  consensus_algorithms.py  coordination_strategies.py  copilot_instructions_manager.py  decision_audit.py  decision_confidence.py  directory_manager.py  dynamic_coordination_tool.py  ecosystem_management_tool.py  explanation.py  fuzzy_matcher.py  hive_mind_query_tool.py  knowledge_classifier.py  knowledge_contribution_tool.py  knowledge_extraction.py  knowledge_quality.py  knowledge_synthesis.py  knowledge_updater.py  knowledge_validator.py  load_balancer.py  mcda.py  mcp_server_manager.py  minority_opinion.py  risk_assessment.py  self_monitoring_tool.py  semantic_search.py  strategy_selector.py  swarm_consensus_tool.py
mcp-swarm-server/src/tests/: __init__.py  task_p13_solution_demo.py  test_agent_discovery.py  test_concurrent_load.py  test_directory_manager.py  test_mcp_compliance.py  test_message_serialization.py  test_p13_functionality.py  test_simple_integration.py  test_task_p13_validation.py
